Git_WGBH_QC/src/objects/WGBH_PB5_UPLOAD__c.object
<CustomObject>
    <description>This object stores PB5 data from various 3rd party gift processing vendors (e.g. Convio, Kimbia, PBSd, Auction, CARS, ACD Pledge, ACD Telemarketing, Lockbox, Aria)</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>WGBH_PB5_UPLOADS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPRT__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>WGBH_PB5_UPLOADS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Card_Address_Line__c</fullName>
        <label>Charge Card Address Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Card_City__c</fullName>
        <label>Charge Card City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Card_State__c</fullName>
        <label>Charge Card State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Card_Zip_Code__c</fullName>
        <label>Charge Card Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>WGBH_PB5_UPLOADS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_Review_Exception__c</fullName>
        <label>Flag_Review_Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flag_Review_Reason__c</fullName>
        <label>Flag Review Reason</label>
        <picklist>
            <picklistValues>
                <fullName>MORE THAN 1 MATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC PLEDGE ID or PLEDGE NUMBER EXIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INS AMT equal to PAYMENT AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIFT DATE ON PLEDGE WITH PREMIUMS &lt; 1 YEAR FROM CURRENT DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE AMOUNT &lt; SUM OF PRODUCTS MINIMUM AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE AMOUNT &lt; PRODUCT MINIMUM AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIFT TYPE IS NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIFT ALREADY CREATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLASSIFICATION ADDED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giving_Record_Type__c</fullName>
        <label>Giving Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>WGBH_PB5_UPLOADS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_DUPLICATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a duplicate record that needs manual intervention.</description>
        <label>IS_DUPLICATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PB5_ADDRESS_TYPE__c</fullName>
        <description>Address type: (H)ome, (W)ork, (S)easonal, (V)acation, (O)ld</description>
        <label>PB5_ADDRESS_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ADJUSTMENT_CODE__c</fullName>
        <description>MAPS TO: UL_BATCH_DETAIL.ADJUSTMENT_CODE</description>
        <label>PB5_ADJUSTMENT_CODE</label>
        <picklist>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_ARIA__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_ARIA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_AUCTION__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_AUCTION</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_CARS__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_CARS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_FDNDEV__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_FDNDEV</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_LOCKBOX__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_LOCKBOX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_PBSD__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_PBSD</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <externalId>true</externalId>
        <label>PB5_ALT_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ANONYMOUS_CODE__c</fullName>
        <label>PB5_ANONYMOUS_CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_APARTMENT_NUMBER__c</fullName>
        <description>Apartment number in preferred address. Maps to: UL_ADDRESSES.APARTMENT_NUMBER</description>
        <label>PB5_APARTMENT_NUMBER</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10__c</fullName>
        <label>PB5_BENEFIT_10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_1__c</fullName>
        <label>PB5_BENEFIT_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_2__c</fullName>
        <label>PB5_BENEFIT_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CALLER__c</fullName>
        <description>THE ID OF THE TELEMARKETING STAFF THAT HANDLED THE PLEDGE CALL, MAPS TO: UL_BATCH_DETAIL.CALLER</description>
        <label>PB5_CALLER</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_ALIAS_FName__c</fullName>
        <label>PB5_CHARGE_CARD_ALIAS_FName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_ALIAS_LName__c</fullName>
        <label>PB5_CHARGE_CARD_ALIAS_LName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_ALIAS__c</fullName>
        <description>GUID FROM SAGE. MAPS TO: UL_BATCH_DETAIL.CHARGE_CARD_ALIAS</description>
        <label>PB5_CHARGE_CARD_ALIAS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_HOLDER_FNAME__c</fullName>
        <description>THE first name of the card holder</description>
        <label>PB5_CHARGE_CARD_HOLDER_FNAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_HOLDER_LNAME__c</fullName>
        <description>THE last name of the charge card holder</description>
        <label>PB5_CHARGE_CARD_HOLDER_LNAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_MASK__c</fullName>
        <description>THE last 4 digits of the credit card number</description>
        <label>PB5_CHARGE_CARD_MASK</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_TYPE__c</fullName>
        <label>PB5_CHARGE_CARD_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_EXPIRE_CDATE__c</fullName>
        <description>Expiration date of card used in payment</description>
        <label>PB5_CHARGE_EXPIRE_CDATE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CITY__c</fullName>
        <description>City of preferred address. Maps to UL_ADDRESSES.CITY</description>
        <label>PB5_CITY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_10__c</fullName>
        <label>PB5_CLASSIFICATION_CODE_10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_1__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_CODE</description>
        <label>PB5_CLASSIFICATION_CODE_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_2__c</fullName>
        <label>PB5_CLASSIFICATION_CODE_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_10__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_VALUE</description>
        <label>PB5_CLASSIFICATION_VALUE_10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_1__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_VALUE</description>
        <label>PB5_CLASSIFICATION_VALUE_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_2__c</fullName>
        <label>PB5_CLASSIFICATION_VALUE_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_COMMENTS__c</fullName>
        <description>MPAS TO: UL_BATCH_DETAIL.COMMENTS</description>
        <label>PB5_COMMENTS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PB5_COUNTRY__c</fullName>
        <description>country of preferred address: maps to: UL_ADDRESSES.COUNTRY</description>
        <label>PB5_COUNTRY</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_ADDRESS_1__c</fullName>
        <description>PREFERRED EMAIL ADDRESS. MAPS TO: UL_EMAILS.EMAIL_ADDRESS</description>
        <label>PB5_EMAIL_ADDRESS_1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_ADDRESS_2__c</fullName>
        <description>The email address of the second name on the account</description>
        <label>PB5_EMAIL_ADDRESS_2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_ADDRESS__c</fullName>
        <description>PREFERRED EMAIL ADDRESS. MAPS TO: UL_EMAILS.EMAIL_ADDRESS</description>
        <label>PB5_EMAIL_ADDRESS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_TYPE_1__c</fullName>
        <description>PREFERRED EMAIL TYPE. MAPS TO UL_EMAILS.EMAIL_TYPE</description>
        <label>PB5_EMAIL_TYPE_1</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_TYPE_2__c</fullName>
        <description>The type of the second e-mail address</description>
        <label>PB5_EMAIL_TYPE_2</label>
        <picklist>
            <picklistValues>
                <fullName>Default Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_TYPE__c</fullName>
        <description>PREFERRED EMAIL TYPE. MAPS TO UL_EMAILS.EMAIL_TYPE</description>
        <label>PB5_EMAIL_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_10__c</fullName>
        <label>PB5_END_CDATE_10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_1__c</fullName>
        <label>PB5_END_CDATE_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_2__c</fullName>
        <label>PB5_END_CDATE_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE__c</fullName>
        <label>PB5_END_CDATE</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_EXTRA_LINE_1__c</fullName>
        <description>from preferred address. Maps To: UL_ADDRESSES.EXTRA_LINE_1</description>
        <label>PB5_EXTRA_LINE_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_FIRST_NAME_2__c</fullName>
        <description>The first name of the second named account in the file</description>
        <label>PB5_FIRST_NAME_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_FIRST_NAME__c</fullName>
        <description>First name of household or contact or organziation. Maps to: UL_NAMES.FIRST_NAME</description>
        <label>PB5_FIRST_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_CDATE__c</fullName>
        <description>DATE GIFT WAS MADE. DEFAULTS TO UPLOAD DATE IF BLANK. MAPS TO: UL_BATCH_DETAIL.GIFT_CDATE</description>
        <label>PB5_GIFT_CDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_KIND__c</fullName>
        <description>MAPS TO: UL_BATCH_DETAIL.GIFT_KIND</description>
        <label>PB5_GIFT_KIND</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_TYPE__c</fullName>
        <description>The gift type</description>
        <label>PB5_GIFT_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ID_TYPE__c</fullName>
        <description>Vendor through which the transaction is being processed: Maps to UL_ACCOUNTS.ID_TYPE</description>
        <label>PB5_ID_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_INSTALLMENT_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE SCHEDULED INSTALLEMENT. MAPS TO: UL_BATCH_DETAIL.INSTALLMENT_AMOUNT</description>
        <label>PB5_INSTALLMENT_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_IS_NEW__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this a new record for Salesforce.</description>
        <label>PB5_IS_NEW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_IS_PROCESSED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this record been processed successfully?</description>
        <label>PB5_IS_PROCESSED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_JOB_TITLE_2__c</fullName>
        <description>The job title of the second name on the record</description>
        <label>PB5_JOB_TITLE_2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_JOB_TITLE__c</fullName>
        <description>Maps to: UL_NAMES.JOB_TITLE</description>
        <label>PB5_JOB_TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_LAST_NAME_2__c</fullName>
        <description>The last name of the second person in the file</description>
        <label>PB5_LAST_NAME_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_LAST_NAME__c</fullName>
        <description>Last name of household, contact, organizaiton. Maps to: UL_NAMES.LAST_NAME</description>
        <label>PB5_LAST_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_MIDDLE_NAME_2__c</fullName>
        <description>The middle name of the second named person in the file</description>
        <label>PB5_MIDDLE_NAME_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_MIDDLE_NAME__c</fullName>
        <description>Middle name of household, contact, organizaiton. Maps to: UL_NAMES.MIDDLE_NAME</description>
        <label>PB5_MIDDLE_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_NO_PHONE_OTHER__c</fullName>
        <label>PB5_NO_PHONE_OTHER</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_NO_PHONE_PREFERRED__c</fullName>
        <label>PB5_NO_PHONE_PREFERRED</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ORGANIZATION_NAME__c</fullName>
        <label>PB5_ORGANIZATION_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENTS_IN_SCHEDULE__c</fullName>
        <description>IF PAYMENT FREQUENCY: A=1, M=12, Q=4, B=6, S=2</description>
        <label>PB5_PAYMENTS_IN_SCHEDULE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE PARTICULAR PAYMENT. MAPS TO: UL_BATCH_DETAIL.PAYMENT_AMOUNT</description>
        <label>PB5_PAYMENT_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_FREQUENCY__c</fullName>
        <description>(A)NNUALLY, (M)ONTHLY, (Q)UARTERLY, (B)I-ANNUALLY, (S)EMI-ANNUALLY</description>
        <label>PB5_PAYMENT_FREQUENCY</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_METHOD__c</fullName>
        <description>METHOD OF PAYMENT.  Kimbia: (KA, KD, KM, KV) Convio (WA, WD, WM, WV) maps to: UL_BATCH_DETAIL.PAYMENT_METHOD</description>
        <label>PB5_PAYMENT_METHOD</label>
        <picklist>
            <picklistValues>
                <fullName>Cybersource American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Unknown Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Fund Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE PLEDGE/OPPORTUNITY. MAPS TO: UL_BATCH_DETAIL.PLEDGE_AMOUNT</description>
        <label>PB5_PLEDGE_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_CTIME__c</fullName>
        <description>TIMESTAMP OF WHEN PLEDGE WAS MADE. MAPS TO UL_BATCH_DETAIL.PLEDGE_CTIME</description>
        <label>PB5_PLEDGE_CTIME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_NUMBER__c</fullName>
        <description>THE SFDC OPPORTUNITY ID</description>
        <label>PB5_PLEDGE_NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_READY_FOR_PROCESSING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready For Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_10__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_1__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_2__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RECORD_TYPE__c</fullName>
        <description>Vendor through which the transaction is being processed: Maps to UL_ACCOUNTS.ID_TYPE. Lookup via ETL Job</description>
        <label>PB5_RECORD_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_REQUIRES_REVIEW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this record require review before being processed?</description>
        <label>Requires Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_CATEGORY__c</fullName>
        <label>PB5_RESPONSE_CATEGORY</label>
        <picklist>
            <picklistValues>
                <fullName>PLEDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_CDATE__c</fullName>
        <label>PB5_RESPONSE_CDATE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_TYPE__c</fullName>
        <label>PB5_RESPONSE_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_Recognition_FName__c</fullName>
        <label>PB5_Recognition_FName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_Recognition_LName__c</fullName>
        <label>PB5_Recognition_LName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SFDC_ID__c</fullName>
        <description>Salesforce ID of household, contact or organization maps to: UL_ACCOUNTS.ACCOUNT_ID</description>
        <label>PB5_SFDC_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_APARTMENT_NUMBER__c</fullName>
        <label>PB5_SHIP_TO_APARTMENT_NUMBER</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_CITY__c</fullName>
        <label>PB5_SHIP_TO_CITY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_EXTRA_LINE_1__c</fullName>
        <label>PB5_SHIP_TO_EXTRA_LINE_1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_FIRST_NAME__c</fullName>
        <label>PB5_SHIP_TO_FIRST_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_LAST_NAME__c</fullName>
        <label>PB5_SHIP_TO_LAST_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_MIDDLE_NAME__c</fullName>
        <label>PB5_SHIP_TO_MIDDLE_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STATE__c</fullName>
        <label>PB5_SHIP_TO_STATE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STREET_1__c</fullName>
        <label>PB5_SHIP_TO_STREET_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>